# word-finder

./: .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py  word_finder.py
scripts/: install.sh  test.sh
scripts/windows/: install.bat  test.bat
tests/: test_word_finder_service.py
word_finder/: __init__.py  word_finder.py
word_finder/ds/: trie.py
